# FabricDefectHub

./: .gitignore  .gitmodules  README.md  TODO.md  VALIDATION.md  app.py  pyproject.toml  requirements-full.txt  requirements.txt
.claude/: launch.json
components/: README.md
configs/: benchmark_example.yaml
configs/datasets/: mvtec_ad_example.yaml  raw_fabric_example.yaml  tianchi_example.yaml  zju_leaper_example.yaml
configs/models/: anomalib_example.yaml  dinomaly_example.yaml  mambaad_example.yaml  moeclip_example.yaml  patchcore_dmba_textile.yaml  patchcore_mvtec_repro.yaml  patchcore_textile.yaml  torchvision_example.yaml  torchvision_maskrcnn_segmentation.yaml  ultralytics_example.yaml  ultralytics_yolov8s.yaml  yolov8_textile.yaml
docs/: BENCHMARK_AND_LATEX.md  EXTENDING.md  RECIPES_AND_LOSSES.md  REPRODUCTION_PATCHCORE.md  SDK_AND_NN.md  SDLP_STRATEGIES.md  cloud_training_runbook.md
frontend/: README.md
schemas/: experiment_result.schema.json  prediction.schema.json  sample.schema.json
src/fabric_defect_hub/: __init__.py  __main__.py  benchmark.py  catalog.py  cli.py  i18n.py  loader.py  predict.py  reporting.py  scoring.py  stats.py  training.py
src/fabric_defect_hub/augmentations/: __init__.py  textile_aug.py
src/fabric_defect_hub/core/: __init__.py  availability.py  base_recipe.py  dataset_capabilities.py  decision.py  preflight.py  registry.py  serialization.py  types.py
src/fabric_defect_hub/datasets/: __init__.py  anomalib_folder.py  base.py  fabric_defects.py  fabric_train.py  flat_folder.py  mvtec_ad.py  mvtec_loco.py  raw_fabric.py  tianchi.py  tilda.py  visa.py  yolo_bbox.py  zju_leaper.py
src/fabric_defect_hub/evaluation/: __init__.py  anomaly.py  base.py  cross_domain.py  detection.py  industrial.py  lmei_profiler.py  pro_calculator.py  segmentation.py  upgrade_consistency.py
src/fabric_defect_hub/inference/: __init__.py  session.py
src/fabric_defect_hub/models/: __init__.py  base.py
src/fabric_defect_hub/models/anomalib/: __init__.py  adapter.py  checkpoint.py  config.py  pipeline.py  presets.py
src/fabric_defect_hub/models/dinomaly/: __init__.py  adapter.py  config.py  pipeline.py  presets.py  vendor.py
src/fabric_defect_hub/models/mambaad/: __init__.py  adapter.py  config.py  data.py  decoder.py  network.py  pipeline.py  presets.py  scan.py  ssm.py
src/fabric_defect_hub/models/moeclip/: __init__.py  adapter.py  config.py  data.py  pipeline.py  presets.py  vendor.py
src/fabric_defect_hub/models/torchvision/: __init__.py  adapter.py  config.py  dataset.py  engine.py  pipeline.py  presets.py
src/fabric_defect_hub/models/ultralytics/: __init__.py  adapter.py  config.py  pipeline.py  presets.py
src/fabric_defect_hub/nn/: __init__.py  backbones.py  hooks.py
src/fabric_defect_hub/nn/heads/: __init__.py  anomaly_head.py
src/fabric_defect_hub/nn/necks/: __init__.py  base_neck.py  textile_neck.py
src/fabric_defect_hub/optim/: __init__.py  losses.py
src/fabric_defect_hub/profiling/: __init__.py  base.py  onnxruntime.py  power.py  pytorch.py  scaling.py  tensorrt.py
src/fabric_defect_hub/quantization/: __init__.py  onnx_quant.py  tensorrt_calibration.py
src/fabric_defect_hub/recipes/: __init__.py  apply.py  dinomaly_recipe.py  mambaad_recipe.py  moeclip_recipe.py  patchcore_recipe.py  rd4ad_recipe.py  yolov8_recipe.py
src/fabric_defect_hub/reporting/: __init__.py  latex_generator.py
src/fabric_defect_hub/strategies/: __init__.py  loader_strategies.py
src/fabric_defect_hub/web/: __init__.py  app.py  benchmark.py  charts.py  single_image.py
tests/: test_anomalib_checkpoint.py  test_anomalib_config.py  test_availability.py  test_backend_integration.py  test_benchmark.py  test_cascade_and_backbones.py  test_catalog.py  test_charts.py  test_cli.py  test_core_serialization.py  test_dataset_capabilities.py  test_decision.py  test_detr.py  test_dinomaly_preflight.py  test_evaluation_anomaly.py  test_evaluation_cross_domain.py  test_evaluation_detection.py  test_evaluation_industrial.py  test_evaluation_segmentation.py  test_evaluation_upgrade_consistency.py  test_fabric_train.py  test_flat_folder_datasets.py  test_gradio_app.py  test_inference_session.py  test_loader.py  test_loader_strategies.py  test_mambaad.py  test_moeclip_config.py  test_mvtec_ad.py  test_mvtec_loco.py  test_nn_modules.py  test_power.py  test_predict.py  test_preflight.py  test_profiling.py  test_profiling_scaling.py  test_profiling_tensorrt.py  test_quantization.py  test_raw_fabric.py  test_recipe_anomalib_wiring.py  (+18 more)
tools/: README.md  convert_annotations.py  export_model.py  smoke_test_all_backends.py  train_all_models.py  visualize_predictions.py
