[project]
name = "fabric-defect-hub"
version = "0.0.1"
description = "Unified benchmark platform for fabric defect detection across Ultralytics, torchvision and Anomalib backends."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pyyaml"]

[project.scripts]
fdh = "fabric_defect_hub.cli:main"
fdh-ui = "fabric_defect_hub.web.app:launch"

# These groups are still here for anyone who wants a narrower
# `pip install -e ".[ultralytics]"`-style selective install, or for PyPI
# packaging metadata -- but day-to-day setup should use one of the two root
# requirements files instead: `requirements.txt` (lean, UI/inference only --
# also what Hugging Face Spaces auto-installs from) or
# `requirements-full.txt` (everything below, plus this package itself,
# editable, in one `pip install -r requirements-full.txt`). Keep both in
# sync if you add a dependency to a group here.
[project.optional-dependencies]
ultralytics = ["ultralytics", "pillow", "pyyaml"]
torchvision = ["torchvision", "torchmetrics", "pycocotools", "pillow", "pyyaml", "onnxscript"]
anomalib = ["anomalib", "scikit-learn", "scikit-image"]
# Dinomaly (components/dinomaly, vendored -- not an anomalib model, see
# components/README.md). torch/torchvision come from anomalib/dev extras.
dinomaly = ["timm", "scipy", "scikit-learn", "tabulate"]
# BackendProfiler runtimes (profiling/pytorch.py needs only torch itself,
# already pulled in by any of the extras above).
profiling-onnxruntime = ["onnxruntime", "psutil"]
profiling-power-nvidia = ["nvidia-ml-py"]
# NVIDIA-only: requires a CUDA-capable GPU + matching CUDA toolkit, hence
# split out from `profiling-onnxruntime`. Not installable/verifiable on
# this project's dev machine (Apple Silicon) — see profiling/tensorrt.py.
profiling-tensorrt = ["tensorrt", "pycuda"]
# Post-training ONNX quantization for edge deployment (quantization/onnx_quant.py):
# fp16 conversion + INT8 dynamic/static. TensorRT INT8 calibration
# (quantization/tensorrt_calibration.py) reuses onnx/pillow/numpy from here
# but needs the profiling-tensorrt extra too for tensorrt/pycuda themselves.
quantization = ["onnx", "onnxruntime", "onnxconverter-common", "pillow", "numpy"]
ui = ["gradio>=5.0,<7", "pillow", "numpy", "psutil"]
dev = [
  "pytest",
  "jsonschema",
  "numpy",
  "pillow",
  "scikit-learn",
  "scikit-image",
  "torch",
  "torchvision",
  "torchmetrics",
  "pycocotools",
  "onnx",
  "onnxruntime",
  "onnxscript",
  "onnxconverter-common",
  "psutil",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: requires real framework dependencies, models, and dataset access",
]
